config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tracker
  template:
    metadata:
      labels:
        app: tracker
    spec:
      containers:
      - name: tracker-container
        image: temmytope/student-tracker:latest
        ports:
        - name: tracker-port
          containerPort: 8000
          protocol: TCP
