config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
spec:
  selector:
    app: tracker
  ports:
  - name: tracker-svc
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
