config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: student.54.85.129.43.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracker-service
            port:
              number: 8000
